--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
 jobs:
   include:
   - stage: deploy-staging
-    script: ansible-playbook -i ansible/inventory.staging.yml ansible/playbook.yml --user $ANSIBLE_USER --private-key ~/.ssh/id_rsa
+    script: ansible-playbook -i ansible/inventory.staging.yml ansible/playbook.yml --user $ANSIBLE_USER --private-key ~/.ssh/id_ed25519 
