--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,26 +7,26 @@
 
   tasks:
   - name: Install Essential Dependencies
-    shell:
-    - apt-get update -y && apt-get upgrade -y && apt-get dist-upgrade -y
-    - apt-get install git-core curl zlib1g-dev build-essential libssl-dev libreadline-dev libyaml-dev libsqlite3-dev sqlite3 libxml2-dev libxslt1-dev libcurl4-openssl-dev software-properties-common libffi-dev dirmngr gnupg apt-transport-https ca-certificates
+    shell: |
+      apt-get update -y && apt-get upgrade -y && apt-get dist-upgrade -y
+      apt-get install git-core curl zlib1g-dev build-essential libssl-dev libreadline-dev libyaml-dev libsqlite3-dev sqlite3 libxml2-dev libxslt1-dev libcurl4-openssl-dev software-properties-common libffi-dev dirmngr gnupg apt-transport-https ca-certificates
 
   - name: Install Ruby
-    shell:
-    - git clone https://github.com/rbenv/rbenv.git ~/.rbenv
-    - echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-    - echo 'eval "$(rbenv init -)"' >> ~/.bashrc
-    - git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
-    - echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
-    - git clone https://github.com/rbenv/rbenv-vars.git ~/.rbenv/plugins/rbenv-vars
-    - exec $SHELL
-    - rbenv install 2.7.3
-    - rbenv global 2.7.3
+    shell: |
+      git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+      echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+      echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+      git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+      echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+      git clone https://github.com/rbenv/rbenv-vars.git ~/.rbenv/plugins/rbenv-vars
+      exec $SHELL
+      rbenv install 2.7.3
+      rbenv global 2.7.3
 
   - name: Install MySql
-    shell:
-    - apt install mysql-server
-    - apt-get install libmysqlclient-dev
+    shell: |
+      apt install mysql-server
+      apt-get install libmysqlclient-dev
 
   - name: Start MySql Server
     service:
@@ -34,15 +34,15 @@
       state: started
 
   - name: Clone App
-    shell:
-    - rm -rf /app
-    - git clone https://github.com/AldiNFitrah/gg-gram.git /app
+    shell: |
+      rm -rf /app
+      git clone https://github.com/AldiNFitrah/gg-gram.git /app
 
   - name: Setup Database
-    shell:
-    - mysql -u root < /app/db/create_database.sql
-    - mysql -u root -p gg_gram < /app/db/schema.sql
-    - mysql -u root -p gg_gram_test < /app/db/schema.sql
+    shell: |
+      mysql -u root < /app/db/create_database.sql
+      mysql -u root -p gg_gram < /app/db/schema.sql
+      mysql -u root -p gg_gram_test < /app/db/schema.sql
 
   - name: Stop Sinatra Server
     systemd:
