--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,7 +2,7 @@
 - name: GCP
   hosts: all
   vars:
-    ansible_ssh_user: 'root'
+    ansible_ssh_user: 'gbe01011'
     ansible_python_interpreter: '/usr/bin/python2'
 
   tasks:
