--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,11 +7,13 @@
 
   tasks:
   - name: Install Essential Dependencies
+    sudo: yes
     shell: |
       apt-get update -y && apt-get upgrade -y && apt-get dist-upgrade -y
       apt-get install git-core curl zlib1g-dev build-essential libssl-dev libreadline-dev libyaml-dev libsqlite3-dev sqlite3 libxml2-dev libxslt1-dev libcurl4-openssl-dev software-properties-common libffi-dev dirmngr gnupg apt-transport-https ca-certificates
 
   - name: Install Ruby
+    sudo: yes
     shell: |
       git clone https://github.com/rbenv/rbenv.git ~/.rbenv
       echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
@@ -24,6 +26,7 @@
       rbenv global 2.7.3
 
   - name: Install MySql
+    sudo: yes
     shell: |
       apt install mysql-server
       apt-get install libmysqlclient-dev
@@ -34,11 +37,13 @@
       state: started
 
   - name: Clone App
+    sudo: yes
     shell: |
       rm -rf /app
       git clone https://github.com/AldiNFitrah/gg-gram.git /app
 
   - name: Setup Database
+    sudo: yes
     shell: |
       mysql -u root < /app/db/create_database.sql
       mysql -u root -p gg_gram < /app/db/schema.sql
@@ -51,6 +56,7 @@
     ignore_errors: yes
 
   - name: Delete Sinatra Service
+    sudo: yes
     shell: rm -rf /etc/systemd/system/sinatra.service
     ignore_errors: yes
 
