--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -50,7 +50,7 @@
     become: yes
     shell: |
       rm -rf /app
-      git clone https://github.com/AldiNFitrah/gg-gram.git /app
+      git clone -b deployment https://github.com/AldiNFitrah/gg-gram.git /app
     register: out
 
   - debug: var=out.stdout_lines
@@ -58,9 +58,9 @@
   - name: Setup Database
     become: yes
     shell: |
-      mysql -u root < /app/db/create_database.sql
-      mysql -u root -p gg_gram < /app/db/schema.sql
-      mysql -u root -p gg_gram_test < /app/db/schema.sql
+      sudo mysql -u root < /app/db/create_database.sql
+      sudo mysql -u root -p gg_gram < /app/db/schema.sql
+      sudo mysql -u root -p gg_gram_test < /app/db/schema.sql
     register: out
 
   - debug: var=out.stdout_lines
