--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -58,9 +58,9 @@
   - name: Setup Database
     become: yes
     shell: |
-      sudo mysql -u root < /app/db/create_database.sql
-      sudo mysql -u root -p gg_gram < /app/db/schema.sql
-      sudo mysql -u root -p gg_gram_test < /app/db/schema.sql
+      mysql -u root < /app/db/create_database.sql
+      mysql -u root -D gg_gram < /app/db/schema.sql
+      mysql -u root -D gg_gram_test < /app/db/schema.sql
     register: out
 
   - debug: var=out.stdout_lines
