--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -58,9 +58,10 @@
   - name: Setup Database
     become: yes
     shell: |
-      mysql -u root < /app/db/create_database.sql
-      mysql -u root -p gg_gram < /app/db/schema.sql
-      mysql -u root -p gg_gram_test < /app/db/schema.sql
+      mysql -u root -p root < /app/db/create_database.sql
+      mysql -u root -p root -D gg_gram < /app/db/schema.sql
+      mysql -u root -p root -D gg_gram_test < /app/db/schema.sql
+    ignore_errors: yes
     register: out
 
   - debug: var=out.stdout_lines
@@ -83,6 +84,7 @@
   - debug: var=out.stdout_lines
 
   - name: Copy Sinatra Service
+    become: yes
     copy:
       src: /app/sinatra.service
       dest: /etc/systemd/system/sinatra.service
@@ -92,13 +94,16 @@
   - debug: var=out.stdout_lines
 
   - name: Reload Systemd
+    become: yes
     systemd:
       daemon_reload: yes
+    ignore_errors: yes
     register: out
 
   - debug: var=out.stdout_lines
 
   - name: Start Sinatra Server
+    become: yes
     systemd:
       name: sinatra
       state: started
