--- a/sinatra.service
+++ b/sinatra.service
@@ -4,8 +4,8 @@ Description=Sinatra application
 [Service]
 User=root
 WorkingDirectory=/app
-EnvironmentFile=/app/.env
-ExecStart=/root/.rbenv/shims/ruby main.rb
+EnvironmentFile=/home/gbe01011/.env
+ExecStart=/home/gbe01011/.rbenv/shims/ruby main.rb
 Restart=on-failure
 
 [Install]
