--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: python
 python:
 - '2.7'
 
+branches:
+  only:
+  - main
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_e1c2d9ef00f4_key -iv $encrypted_e1c2d9ef00f4_iv
   -in id_ed25519.enc -out ~/.ssh/id_ed25519 -d
